--- a/diplomaadminpanel.csproj
+++ b/diplomaadminpanel.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="dotenv.net" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.3" />
   </ItemGroup>
 
