default env to prod

--- a/App.config
+++ b/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <diplomaadminpanel.Properties.Settings>
             <setting name="env" serializeAs="String">
-                <value />
+                <value>prod</value>
             </setting>
         </diplomaadminpanel.Properties.Settings>
     </userSettings>
